--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -10,9 +10,9 @@
     <div class="stopwatch">
         <h1 id="displayTime">00:00:00</h1>
         <div class="button">
-            <img onclick="stopwatch()" src="./stopwatch_img/images/stop.png" alt="">
+            <img onclick="watchStop()" src="./stopwatch_img/images/stop.png" alt="">
             <img onclick="watchStart()" src="./stopwatch_img/images/start.png" alt="">
-            <img onclick="watchStop()" src="./stopwatch_img/images/reset.png" alt="">
+            <img onclick="watchReset()" src="./stopwatch_img/images/reset.png" alt="">
         </div>
     </div>
 
@@ -51,7 +51,7 @@
         function watchReset() {
             clearInterval(timer);
             [seconds,minutes,hours]=[0,0,0]
-            displayTime.innerHTML `00:00:00`
+            displayTime.innerHTML= `00:00:00`
         }
     </script>
 </body>
