--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="stopwatch">
-        <h1 id="displayTime">00:00:00</h1>
+        <h1>H:M:S:Mi</h1>
+        <h1 id="displayTime">00:00:00:00</h1>
         <div class="button">
             <img onclick="watchStop()" src="./stopwatch_img/images/stop.png" alt="">
             <img onclick="watchStart()" src="./stopwatch_img/images/start.png" alt="">
@@ -17,12 +18,15 @@
     </div>
 
     <script>
-        let [seconds,minutes,hours]=[0,0,0];
+        let [seconds,minutes,hours,milisecond]=[0,0,0,0];
         let displayTime = document.getElementById('displayTime');
         let timer = null
 
         function stopwatch() {
-            seconds++;
+            milisecond++;
+            if (milisecond == 60) {
+                milisecond = 0
+                seconds++
             if (seconds == 60) {
                 seconds=0;
                 minutes++;
@@ -31,16 +35,18 @@
                     hours++;
                 }
             }
+        }
             let h = hours<10?"0"+ hours:hours;
             let m = minutes  < 10?"0"+minutes:minutes
             let s = seconds <10 ? "0" +seconds:seconds
-            displayTime.innerHTML = `${h} : ${m}:${s}`
+            let mili = milisecond <10? "0"+milisecond:milisecond
+            displayTime.innerHTML = `${h} : ${m}:${s}:${mili}`
         }
         function watchStart() {
             if (timer !== null) {
                 clearInterval(timer);
             }
-            timer = setInterval(stopwatch,1000);
+            timer = setInterval(stopwatch,0);
        
         }
 
@@ -50,8 +56,8 @@
 
         function watchReset() {
             clearInterval(timer);
-            [seconds,minutes,hours]=[0,0,0]
-            displayTime.innerHTML= `00:00:00`
+            [seconds,minutes,hours,milisecond]=[0,0,0,0]
+            displayTime.innerHTML= `00:00:00:00`
         }
     </script>
 </body>
