--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,10 +14,34 @@
             <input type="text" name="display" />
           </div>
           <div>
-            <input type="button" name="" value="AC" id="" />
-            <input type="button" name="" value="DE" id="" />
-            <input type="button" name="" value="." id="" />
-            <input type="button" name="" value="." id="" />
+            <input
+              type="button"
+              name=""
+              value="AC"
+              id=""
+              onclick="display.value ='' "
+            />
+            <input
+              type="button"
+              name=""
+              value="DE"
+              id=""
+              onclick="display.value = display.value.toString().slice(0,-1) "
+            />
+            <input
+              type="button"
+              name=""
+              value="."
+              id=""
+              onclick="display.value +='.' "
+            />
+            <input
+              type="button"
+              name=""
+              value="/"
+              id=""
+              onclick="display.value +='/' "
+            />
           </div>
           <div>
             <input
@@ -25,28 +49,113 @@
               name=""
               value="7"
               id=""
-              onclick="display.value= '7' "
+              onclick="display.value +='7' "
             />
-            <input type="button" name="" value="8" id="" />
-            <input type="button" name="" value="9" id="" />
-            <input type="button" name="" value="*" id="" />
+            <input
+              type="button"
+              name=""
+              value="8"
+              id=""
+              onclick="display.value +='8' "
+            />
+            <input
+              type="button"
+              name=""
+              value="9"
+              id=""
+              onclick="display.value +='9' "
+            />
+            <input
+              type="button"
+              name=""
+              value="*"
+              id=""
+              onclick="display.value +='*' "
+            />
           </div>
           <div>
-            <input type="button" name="" value="4" id="" />
-            <input type="button" name="" value="5" id="" />
-            <input type="button" name="" value="6" id="" />
-            <input type="button" name="" value="-" id="" />
+            <input
+              type="button"
+              name=""
+              value="4"
+              id=""
+              onclick="display.value +='4' "
+            />
+            <input
+              type="button"
+              name=""
+              value="5"
+              id=""
+              onclick="display.value +='5' "
+            />
+            <input
+              type="button"
+              name=""
+              value="6"
+              id=""
+              onclick="display.value +='6' "
+            />
+            <input
+              type="button"
+              name=""
+              value="-"
+              id=""
+              onclick="display.value +='-' "
+            />
           </div>
           <div>
-            <input type="button" name="" value="1" id="" />
-            <input type="button" name="" value="2" id="" />
-            <input type="button" name="" value="3" id="" />
-            <input type="button" name="" value="+" id="" />
+            <input
+              type="button"
+              name=""
+              value="1"
+              id=""
+              onclick="display.value +='1' "
+            />
+            <input
+              type="button"
+              name=""
+              value="2"
+              id=""
+              onclick="display.value +='2' "
+            />
+            <input
+              type="button"
+              name=""
+              value="3"
+              id=""
+              onclick="display.value +='3' "
+            />
+            <input
+              type="button"
+              name=""
+              value="+"
+              id=""
+              onclick="display.value +='+' "
+            />
           </div>
           <div>
-            <input type="button" name="" value="00" id="" />
-            <input type="button" name="" value="0" id="" />
-            <input type="button" name="" value="=" id="" class="equal" />
+            <input
+              type="button"
+              name=""
+              value="00"
+              id=""
+              onclick="display.value +='00' "
+            />
+            <input
+              type="button"
+              name=""
+              value="0"
+              id=""
+              onclick="display.value +='0' "
+            />
+            <input
+              type="button"
+              name=""
+              value="="
+              id=""
+              class="equal"
+              onclick="display.value +='=' "
+            />
           </div>
         </form>
       </div>
